2009-05-18  Stephane Delcroix  <sdelcroix@novell.com>

	* configure.in.in:
	* bootstrap-generic:
	* bootstrap-2.14: check for mono >= 2.2. not that it requires it to
	build, but the generated bindings need it to run.

2009-05-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* glib/Value.cs: return int object value for GType.Enum values if
	the explicit gtype is not found.  [Fixes #503060]

2009-05-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* glib/ValueArray.cs: use type specific PtrToStructure marshaling to
	avoid ArgumentExceptions.  [Fixes #503467]

2009-05-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* glib/Value.cs: Add support for ValueArrays inside GLib.Values.
	* glib/ValueArray.cs: Add GType property to get the ValueArray GType.
	[Fixes #503048]

2009-05-12  Mike Kestner  <mkestner@novell.com>

	* glib/Value.cs: explicit exception for unknown props.
	[Fixes #502043] Patch by Sebastian Dröge.

2009-05-12  Mike Kestner  <mkestner@novell.com>

	* glib/ValueArray.cs: make ctor(IntPtr) public for binding usage. 
	[Fixes #503189] Patch by Sebastian Dröge.

2009-05-12  Mike Kestner  <mkestner@novell.com>

	* gtk/Application.cs: add the theme initialization workaround for 
	windows.  Hopefully we can find a better solution that doesn't
	involve loading SWF.  [Fixes #471682]

2009-05-06  Mike Kestner  <mkestner@novell.com>

	* gtk/RadioMenuItem.custom: implement subclassing for group/label 
	ctor.  [Fixes #320971]

2009-05-06  Mike Kestner  <mkestner@novell.com>

	* gtk/PaperSize.custom: add static props for Letter and the other
	named papers.  [Fixes #324687]

2009-05-06  Mike Kestner  <mkestner@novell.com>

	* glib/Idle.cs: add a Remove overload for consistency.
	* glib/Timeout.cs: add a Remove overload for consistency.
	[Fixes #356138]

2009-05-06  Mike Kestner  <mkestner@novell.com>

	* generator/EnumGen.cs: support 1L long values or explicit types.

2009-05-06  Mike Kestner  <mkestner@novell.com>
