@@ -1,3 +1,9 @@
+2009-05-28  Aaron Bockover  <abockover@novell.com>
+
+	* generator/EnumGen.cs: Fix enum generator to properly parse integer
+	values with type modifier suffixes (UL, L, U), and not accidentally
+	munge named values that happen to end in one of these suffixes
+
 2009-05-18  Stephane Delcroix  <sdelcroix@novell.com>
 
 	* configure.in.in:
